Ajuste de cores
Harmonizando cores do background com cores das imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="msg">
         </div>
         <div id="pic">
-            <img id="imagem" src="morning.png" alt="picture of the day">
+            <img id="imagem" src="" alt="picture of the day">
 
         </div>
 
